<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/gradient_list"
    android:id="@+id/activity_profile"
    android:theme="@style/ProfileTheme">

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- First view -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ProfileActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/frameLayout"
                android:layout_width="349dp"
                android:layout_height="427dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.245">

                <Button
                    android:id="@+id/btnProfile1"
                    android:layout_width="165dp"
                    android:layout_height="200dp"
                    android:background="@drawable/button_shape_createprofile"
                    android:text="Alfons"
                    android:textColor="#FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnProfile2"
                    android:layout_width="165dp"
                    android:layout_height="200dp"
                    android:background="@drawable/button_shape_createprofile"
                    android:text="empty"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnProfile3"
                    android:layout_width="165dp"
                    android:layout_height="200dp"
                    android:background="@drawable/button_shape_createprofile"
                    android:text="empty"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btnProfile4"
                    android:layout_width="165dp"
                    android:layout_height="200dp"
                    android:background="@drawable/button_shape_createprofile"
                    android:text="empty"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btnSettings"
                android:layout_width="147dp"
                android:layout_height="49dp"
                android:background="@drawable/button_shape_profile"
                android:textColor="#FFFFFF"
                android:text="Settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.781" />

            <Button
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Home"
                android:background="@drawable/button_shape_profile"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSettings" />


            <ImageView
                android:id="@+id/questionMark"
                android:layout_width="50dp"
                android:layout_height="46dp"
                android:elevation="11dp"
                app:layout_constraintBottom_toBottomOf="@+id/suggestionsButton"
                app:layout_constraintEnd_toEndOf="@+id/suggestionsButton"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="@+id/suggestionsButton"
                app:layout_constraintTop_toTopOf="@+id/suggestionsButton"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/icons8_question_mark_64" />

            <TextView
                android:id="@+id/suggestionsTextView"
                android:layout_width="360dp"
                android:layout_height="700dp"
                android:background="@drawable/background_suggestions_textview"
                android:elevation="10dp"
                android:padding="16dp"
                android:text="TextView"
                android:textAllCaps="false"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/suggestionsButton"
                android:layout_width="60dp"
                android:layout_height="47dp"
                android:layout_margin="8dp"
                android:background="@drawable/button_suggestions"
                android:elevation="11dp"
                android:text="Button"
                android:textSize="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.934"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.976" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Second view -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Temp">


            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Discard"
                android:background="@drawable/button_shape_profile"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSave"
                app:layout_constraintVertical_bias="0.163"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_conversion_absoluteWidth="0dp" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="148dp"
                android:layout_height="47dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_shape_profile"
                android:textColor="#FFFFFF"
                android:text="Save changes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                app:layout_constraintVertical_bias="0.152" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="371dp"
                android:layout_height="553dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintVertical_bias="0.059">


                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="Enter the profile name"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCCCCC"
                    android:textStyle="italic"
                    android:maxLength="12"
                    android:maxLines="1"
                    android:inputType="text"
                    app:layout_constraintBottom_toTopOf="@+id/sldTemp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Temperature"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toTopOf="@+id/sldTemp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/sldTemp"
                    android:layout_width="332dp"
                    android:layout_height="50dp"
                    android:stepSize="1"
                    android:value="22"
                    android:valueFrom="15"
                    android:valueTo="30"
                    app:haloColor="#FFFFFF"
                    app:labelBehavior="visible"
                    app:layout_constraintBottom_toTopOf="@+id/sldHum"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editName"
                    app:thumbColor="@color/teal_700"
                    app:thumbStrokeColor="@color/teal_700"
                    app:tickColor="@color/teal_200"
                    app:tickColorActive="@color/teal_200"
                    app:tickColorInactive="@color/teal_200"
                    app:trackColor="@color/teal_700" />

                <TextView
                    android:id="@+id/txtHum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Humidity"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toTopOf="@+id/sldHum"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/sldHum"
                    android:layout_width="332dp"
                    android:layout_height="50dp"
                    android:stepSize="1"
                    android:value="40"
                    android:valueFrom="20"
                    android:valueTo="60"
                    app:haloColor="#FFFFFF"
                    app:labelBehavior="visible"
                    app:layout_constraintBottom_toTopOf="@+id/sldLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sldTemp"
                    app:thumbColor="@color/teal_700"
                    app:thumbStrokeColor="@color/teal_700"
                    app:tickColor="@color/teal_200"
                    app:tickColorActive="@color/teal_200"
                    app:tickColorInactive="@color/teal_200"
                    app:trackColor="@color/teal_700" />

                <TextView
                    android:id="@+id/txtLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Light Level"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toTopOf="@+id/sldLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.481"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/sldLight"
                    android:layout_width="332dp"
                    android:layout_height="50dp"
                    android:stepSize="10"
                    android:value="700"
                    android:valueFrom="500"
                    android:valueTo="1000"
                    app:haloColor="#FFFFFF"
                    app:labelBehavior="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sldHum"
                    app:thumbColor="@color/teal_700"
                    app:thumbStrokeColor="@color/teal_700"
                    app:tickColor="@color/teal_200"
                    app:tickColorActive="@color/teal_200"
                    app:tickColorInactive="@color/teal_200"
                    app:trackColor="@color/teal_700" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ViewFlipper>

</androidx.constraintlayout.widget.ConstraintLayout>